[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://views/MainView/MainView.gd" type="Script" id=2]
[ext_resource path="res://views/Viewport/Viewport.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/shaders/brush_preview_shader.tres" type="Material" id=4]
[ext_resource path="res://assets/textures/logo.svg" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MainView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="View" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 2

[node name="MenuBar" type="HBoxContainer" parent="View"]
margin_right = 1280.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="FileMenu" type="MenuButton" parent="View/MenuBar"]
margin_right = 35.0
margin_bottom = 30.0
text = "File"
items = [ "New...", null, 0, false, false, -1, 0, null, "", false, "Open...", null, 0, false, false, -1, 0, null, "", false, "Save", null, 0, false, false, -1, 0, null, "", false, "Save as...", null, 0, false, false, -1, 0, null, "", false, "Load mesh...", null, 0, false, false, -1, 0, null, "", false, "Import...", null, 0, false, false, -1, 0, null, "", false, "Export...", null, 0, false, false, -1, 0, null, "", false, "Quit", null, 0, false, false, -1, 0, null, "", false ]

[node name="OptionsMenu" type="MenuButton" parent="View/MenuBar"]
margin_left = 39.0
margin_right = 102.0
margin_bottom = 30.0
text = "Options"

[node name="MainFrame" type="HSplitContainer" parent="View"]
margin_top = 30.0
margin_right = 1280.0
margin_bottom = 960.0
size_flags_horizontal = 3

[node name="LeftPanel" type="HSplitContainer" parent="View/MainFrame"]
margin_right = 1072.0
margin_bottom = 930.0
size_flags_horizontal = 3

[node name="PaintViewport" type="Control" parent="View/MainFrame/LeftPanel"]
margin_right = 914.0
margin_bottom = 930.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="View/MainFrame/LeftPanel/PaintViewport"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="View/MainFrame/LeftPanel/PaintViewport/ViewportContainer"]
size = Vector2( 914, 930 )
handle_input_locally = false
render_target_update_mode = 3

[node name="main" parent="View/MainFrame/LeftPanel/PaintViewport/ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="ViewportUI" type="Control" parent="View/MainFrame/LeftPanel/PaintViewport"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 1

[node name="Cursor" type="Panel" parent="View/MainFrame/LeftPanel/PaintViewport/ViewportUI"]
margin_top = -30.0
margin_right = 64.0
margin_bottom = 34.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="ColorPicker" type="ColorPicker" parent="View/MainFrame/LeftPanel/PaintViewport/ViewportUI"]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0

[node name="BottomPanel" type="VSplitContainer" parent="View/MainFrame/LeftPanel"]
margin_left = 922.0
margin_right = 1072.0
margin_bottom = 930.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="View/MainFrame/LeftPanel/BottomPanel"]
margin_right = 150.0
margin_bottom = 930.0

[node name="albedo" type="VBoxContainer" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer"]
margin_right = 150.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="label" type="Label" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer/albedo"]
margin_right = 150.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Albedo"
align = 1
valign = 1

[node name="rect" type="TextureRect" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer/albedo"]
margin_top = 26.0
margin_right = 150.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="roughness" type="VBoxContainer" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer"]
margin_top = 233.0
margin_right = 150.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="label" type="Label" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer/roughness"]
margin_right = 150.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Roughness"
align = 1
valign = 1

[node name="rect" type="TextureRect" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer/roughness"]
margin_top = 26.0
margin_right = 150.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="metalness" type="VBoxContainer" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer"]
margin_top = 466.0
margin_right = 150.0
margin_bottom = 695.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="label" type="Label" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer/metalness"]
margin_right = 150.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Metalness"
align = 1
valign = 1

[node name="rect" type="TextureRect" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer/metalness"]
margin_top = 26.0
margin_right = 150.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="emission" type="VBoxContainer" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer"]
margin_top = 699.0
margin_right = 150.0
margin_bottom = 930.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="label" type="Label" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer/emission"]
margin_right = 150.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Emission"
align = 1
valign = 1

[node name="rect" type="TextureRect" parent="View/MainFrame/LeftPanel/BottomPanel/HBoxContainer/emission"]
margin_top = 26.0
margin_right = 150.0
margin_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="RightPanel" type="VSplitContainer" parent="View/MainFrame"]
margin_left = 1080.0
margin_right = 1280.0
margin_bottom = 930.0
rect_min_size = Vector2( 200, 0 )

[node name="Brush" type="VBoxContainer" parent="View/MainFrame/RightPanel"]
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Preview" type="VBoxContainer" parent="View/MainFrame/RightPanel/Brush"]
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="Label" type="Label" parent="View/MainFrame/RightPanel/Brush/Preview"]
margin_right = 200.0
margin_bottom = 22.0
text = "Brush"

[node name="rect" type="TextureRect" parent="View/MainFrame/RightPanel/Brush/Preview"]
material = ExtResource( 4 )
margin_top = 26.0
margin_right = 200.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="softness_slider" type="HSlider" parent="View/MainFrame/RightPanel/Brush/Preview"]
margin_top = 146.0
margin_right = 200.0
margin_bottom = 150.0
max_value = 1.0
step = 0.01
tick_count = 4
ticks_on_borders = true

[node name="VBoxContainer" type="VBoxContainer" parent="View/MainFrame/RightPanel/Brush"]
margin_top = 154.0
margin_right = 200.0
margin_bottom = 202.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="View/MainFrame/RightPanel/Brush/VBoxContainer"]
margin_right = 200.0
margin_bottom = 22.0
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="View/MainFrame/RightPanel/Brush/VBoxContainer"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 48.0
color = Color( 1, 1, 1, 1 )

[node name="BottomPanel" type="VBoxContainer" parent="View/MainFrame/RightPanel"]
margin_top = 308.0
margin_right = 200.0
margin_bottom = 930.0
rect_min_size = Vector2( 0, 300 )

[node name="Layers" type="Panel" parent="View/MainFrame/RightPanel/BottomPanel"]
margin_right = 200.0
margin_bottom = 518.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="View/MainFrame/RightPanel/BottomPanel/Layers"]
margin_right = 8.0
margin_bottom = 22.0
text = "Layers"

[node name="VBoxContainer" type="VBoxContainer" parent="View/MainFrame/RightPanel/BottomPanel"]
margin_top = 522.0
margin_right = 200.0
margin_bottom = 622.0
size_flags_horizontal = 3

[node name="znear" type="Label" parent="View/MainFrame/RightPanel/BottomPanel/VBoxContainer"]
margin_right = 200.0
margin_bottom = 22.0
text = "Z-near"

[node name="znear_box" type="HBoxContainer" parent="View/MainFrame/RightPanel/BottomPanel/VBoxContainer"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 48.0

[node name="val" type="Label" parent="View/MainFrame/RightPanel/BottomPanel/VBoxContainer/znear_box"]
margin_right = 40.0
margin_bottom = 22.0
rect_min_size = Vector2( 40, 0 )
text = "0.25"
clip_text = true

[node name="znear_slider" type="HSlider" parent="View/MainFrame/RightPanel/BottomPanel/VBoxContainer/znear_box"]
margin_left = 44.0
margin_right = 200.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
step = 0.1
value = 0.3
exp_edit = true

[node name="zfar" type="Label" parent="View/MainFrame/RightPanel/BottomPanel/VBoxContainer"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 74.0
text = "Z-far"

[node name="zfar_box" type="HBoxContainer" parent="View/MainFrame/RightPanel/BottomPanel/VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 100.0

[node name="val" type="Label" parent="View/MainFrame/RightPanel/BottomPanel/VBoxContainer/zfar_box"]
margin_right = 40.0
margin_bottom = 22.0
rect_min_size = Vector2( 40, 0 )
text = "50"
clip_text = true

[node name="zfar_slider" type="HSlider" parent="View/MainFrame/RightPanel/BottomPanel/VBoxContainer/zfar_box"]
margin_left = 44.0
margin_right = 200.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
step = 0.1
value = 50.0
exp_edit = true
[connection signal="gui_input" from="View/MainFrame/LeftPanel/PaintViewport/ViewportUI" to="View/MainFrame/LeftPanel/PaintViewport/ViewportContainer/Viewport/main" method="_on_ViewportUI_gui_input"]
[connection signal="value_changed" from="View/MainFrame/RightPanel/Brush/Preview/softness_slider" to="." method="_on_softness_slider_value_changed"]
[connection signal="color_changed" from="View/MainFrame/RightPanel/Brush/VBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="value_changed" from="View/MainFrame/RightPanel/BottomPanel/VBoxContainer/znear_box/znear_slider" to="." method="_on_znear_slider_value_changed"]
[connection signal="value_changed" from="View/MainFrame/RightPanel/BottomPanel/VBoxContainer/zfar_box/zfar_slider" to="." method="_on_zfar_slider_value_changed"]
